syntax = "proto3";

package music;

option go_package = "./";

service MusicQueueService {
    rpc AddSong(AddSongRequest) returns (AddSongResponse);
    rpc GetQueue(Empty) returns (SongQueueResponse);
    rpc UpvoteSong(UpvoteRequest) returns (UpvoteResponse);
}

message AddSongRequest {
    string title = 1;
    string artist = 2;
    string youtube_url = 3;
}

message AddSongResponse {
    string message = 1;
}

message Empty {}

message Song {
    int32 id = 1;
    string title = 2;
    string artist = 3;
    int32 upvotes = 4;
    string youtube_url = 5;
}

message SongQueueResponse {
    repeated Song songs = 1;
}

message UpvoteRequest {
    int32 songId = 1;
}

message UpvoteResponse {
    string message = 1;
}